# career-alignment-Agent-backend

./: .env.example  .gitignore  FILE_EXTRACTION_GRILL_MEMORY.md  JINJA_WEASYPRINT_GRILL_MEMORY.md  README.md  RESUME_WORKFLOW_GRILL_MEMORY.md  USER_ABSTRACT_CONTEXT_GRILL_MEMORY.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: health.py  jobs.py  profiles.py  tailoring.py
app/core/: config.py  enums.py  errors.py
app/db/: session.py
app/models/: tables.py
app/schemas/: __init__.py  api.py  job_spec.py  match.py  profile.py  profile_document.py  resume.py  selection.py
app/services/: agents.py  document_ingestion.py  fallbacks.py  html_renderer.py  job_ingestion.py  latex.py  model_run_logger.py  profile_extraction.py  profile_service.py  prompts.py  scraper.py  tailoring.py  template_builder.py  url_normalizer.py  validation.py
app/templates/: jakes_resume.css  jakes_resume.html.j2
migrations/: 001_user_profile_contexts.sql
tests/: test_contracts.py  test_html_renderer.py  test_job_lifecycle.py  test_keyless_workflow.py  test_latex.py  test_profile_context.py  test_profile_document_extraction.py  test_profile_evidence.py  test_scraper.py  test_template_builder.py
